Use explicit Boost and GTest versions. Add GitHub Workflow.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.24)
 project(cpp-project-template-Tests)
 
-find_package(GTest REQUIRED)
+find_package(GTest 1.12.1 REQUIRED)
 
 if (NOT TARGET cpp-project-template::Lib)
     find_package(cpp-project-template::Lib CONFIG REQUIRED)
 endif()
 
-find_package(Boost COMPONENTS filesystem REQUIRED)
+find_package(Boost 1.81.0 COMPONENTS filesystem REQUIRED)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
@@ -17,7 +17,6 @@ target_link_libraries(cpp-project-template-Tests
         PRIVATE
             Threads::Threads
             cpp-project-template::Lib
-            GTest::gtest
             GTest::gtest_main
             ${Boost_LIBRARIES})
 
